Fix/workaround image clipping issue

--- a/src/css/_animations.scss
+++ b/src/css/_animations.scss
@@ -80,6 +80,11 @@ $ease-exit: cubic-bezier(0.75,0,0.8,0.5);
 			clip-path: circle(70.72% at 50% 50%);
 			transition: opacity $fast $ease-out $fast,
 			            clip-path $very-slow $ease $fast;
+
+			// Disable clip-path for Chrome Android due to positioning bug
+			body.ua-browser-name_Chrome.ua-os-name_Android & {
+				clip-path: none !important;
+			}
 		}
 		.image {
 			opacity: 0;
