--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -250,9 +250,7 @@ section {
 		}
 		.image {
 			display: block;
-			height: 25vh;
 			width: 100%;
-			object-fit: cover;
 			margin-bottom: 1em;
 		}
 	}
